# coauthor-interface

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MAINTAINERS.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: standard.yaml
backend/: access_code.py  api_server.py  helper.py  reader.py
config/: access_codes.csv
github/: standard.yaml
github/ISSUE_TEMPLATE/: feature_request.md
scripts/: time_query_route.py
src/coauthor_interface/backend/: PluginInterface.py  access_code.py  api_server.py  data_format.md  helper.py  parse_all_consolidated.py  parsing.py  reader.py
src/coauthor_interface/frontend/: demo.html  index.html  replay.html
src/coauthor_interface/frontend/js/: async.js  config.js  editor.js  helper.js  index.js  script.js
src/coauthor_interface/thought_toolkit/: PluginInterface.py  README.md  action_parser.py  active_plugins.py  helper.py  level_2_comparisons.py  level_3_comparisons.py  level_3_plugins.py  parse_all_consolidated.py  parser_all_levels.py  parser_helper.py  run_post_session_analysis.py  utils.py
tests/: test_access_code.py  test_action_parser.py  test_api_server.py  test_helper.py  test_parse_all_consolidated.py  test_parsing.py  test_plugin.py  test_reader.py  test_run_post_session_analysis.py  test_thought_toolkit_modules.py
