[project]
name = "coauthor-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.4",
    "aiosignal>=1.3.1",
    "altgraph>=0.17.2",
    "async-timeout>=4.0.2",
    "attrs>=23.1.0",
    "certifi>=2022.12.7",
    "charset-normalizer>=3.1.0",
    "click>=8.1.3",
    "flask>=2.2.3",
    "flask-cors>=5.0.1",
    "frozenlist>=1.3.3",
    "future>=1.0.0",
    "idna>=3.4",
    "importlib-metadata>=6.6.0",
    "ipdb>=0.13.13",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.2",
    "joblib>=1.2.0",
    "macholib>=1.16.3",
    "markupsafe>=2.1.2",
    "multidict>=6.0.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "openai>=1.76.2",
    "regex>=2023.3.23",
    "requests>=2.32.3",
    "setuptools>=80.1.0",
    "six>=1.17.0",
    "spacy>=3.8.5",
    "tqdm>=4.65.0",
    "urllib3>=1.26.15",
    "werkzeug>=2.2.3",
    "wheel>=0.45.1",
    "yarl>=1.9.1",
    "zipp>=3.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose -vv --capture=no --cov=coauthor_interface --cov-fail-under=50.0"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyfakefs>=5.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "BLE001", # Do not catch blind exception: `Exception`
    "COM812", # Trailing comma missing
    "D202", # No blank lines allowed after function docstring
    "D205", # 1 blank line required between summary line and description
    "E501", # Line too long
    "I001", # Import block is un-sorted or un-formatted
    "INP001", # Missing __init__.py file
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "S101", # Use of assert detected
    "UP032", # Use f-string instead of `format` call
    "F821", # Undefined name
    "F841", # Local variable is assigned but never used,
    "B007", # Unnecessary pass
    "N806", # String statement has no effect
    "N803", # Unused import
    "N805", # Unused variable
    "N804", # Unused argument
    "N807", # Unused starred expression
    "N815", # Unused function parameter
    "C408",
    "C403",
    "F823", # Undefined name
    "RUF012", # Unused function argument,
    "C419", # Unused import
    "RUF005", # Unused function argument
    
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"parser_all_levels.py" = ["F405", "F403"]
